# kbapp

./: Cargo.toml  LICENSE  README.md  syntax.md
config_examples/: config.json  hyprland_options.conf  libinput_gestures.conf
src/: app_bindings.rs  cli.rs  focused.rs  main.rs  socket.rs  virtual_device.rs
src/gesture/: mod.rs
src/uinput_device/: keys.rs  mod.rs
