[package]
name = "kbapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
serde_json = "1.0.107"
uinput = "0.1.3"
tokio = { version = "1.38.0", features = ["process", "io-util", "full"] }
input = "0.8.3"
nix = { version = "0.27.1", features = ["poll"] }
udev = "0.8.0"
